# pnetctl

./: README.md  meson.build  pnetctl.c
.github/workflows/: ci_meson.yml
src/: cmd.c  cmd.h  cmd_test.c  common.h  devices.c  devices.h  devices_test.c  main.c  netlink.c  netlink.h  netlink_test.c  pnetctl.c  pnetctl.h  print.c  print.h  print_test.c  test.c  test.h  udev.c  udev.h  udev_test.c  verbose.c  verbose.h  verbose_test.c
